third_party/rust/quote/v1/crate/tests/ui/does-not-have-iter-interpolated.stderr
error[E0308]: mismatched types
 --> tests/ui/does-not-have-iter-interpolated.rs:8:5
  |
8 |     quote!(#(#nonrep)*);
  |     ^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `HasIterator`, found `ThereIsNoIteratorInRepetition`
  |     expected due to this
  |     here the type of `has_iter` is inferred to be `ThereIsNoIteratorInRepetition`
  |
  = note: this error originates in the macro `$crate::quote_token_with_context` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
